--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,22 @@
-#result {
+.result {
   font-size: 20px;
+  display: none;
+}
+
+h1 {
+  text-align: center;
+}
+
+img {
+  width: 225px;
+  margin-left: 30px;
+}
+
+.imgbox {
+  margin: auto;
+}
+
+.dialogueBox {
+  text-align: center;
+  height: auto;
 }
